--- a/views/books/book-details.hbs
+++ b/views/books/book-details.hbs
@@ -8,6 +8,12 @@
         <strong>Description:</strong>
         {{description}}
     </p>
+
+    <p>
+        <form action="/books/{{_id}}/delete" method="POST">
+            <button>Delete</button>
+        </form>
+    </p>
 </section>
 
 <a href="/books/{{this._id}}/edit">Edit Book</a> | <a href="/books">Back</a>
