--- a/views/books/book-details.hbs
+++ b/views/books/book-details.hbs
@@ -1,8 +1,14 @@
 <section class="book-details">
     <h2>{{title}}</h2>
+
     <p>
-        Author: {{author}} <br />
-        Rating: {{rating}} <br />
+        <strong>Author:</strong> <br />
+        {{author.name}} <br />
+        {{author.age}} <br />
+        {{author.country}} <br />
+    </p>
+    <p>
+        <strong>Rating: </strong> {{rating}} <br />
     </p>
     <p>
         <strong>Description:</strong>
@@ -14,6 +20,6 @@
             <button>Delete</button>
         </form>
     </p>
-</section>
 
+</section>
 <a href="/books/{{this._id}}/edit">Edit Book</a> | <a href="/books">Back</a>
