--- a/views/books/books-list.hbs
+++ b/views/books/books-list.hbs
@@ -4,7 +4,7 @@
     <section class="book-summary">
         <h2>{{this.title}}</h2>
         <p>
-            Author: {{this.author.name}} <br />
+            Author: {{this.author.name}}, from {{this.author.country}} <br />
             Rating: {{this.rating}} <br />
             <a href="/books/{{this._id}}">More details</a> |
             <a href="/books/{{this._id}}/edit">Edit</a>
