--- a/views/books/books-list.hbs
+++ b/views/books/books-list.hbs
@@ -7,7 +7,10 @@
             Author: {{this.author.name}}, from {{this.author.country}} <br />
             Rating: {{this.rating}} <br />
             <a href="/books/{{this._id}}">More details</a> |
-            <a href="/books/{{this._id}}/edit">Edit</a>
+            <a href="/books/{{this._id}}/edit">Edit</a> |
+            <form action="/books/{{_id}}/delete" method="POST">
+                <button>Delete</button>
+            </form>
         </p>
 
     </section>
